# benchmark.translate-zh-cn

./: .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  REVIEW.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
data/paragraphs/: _seed_lectures.json
data/sentences/: _seed_lectures.json
data/terms/: _seed_calculus.json  _seed_dynamic_programming.json  _seed_economics.json  _seed_finance.json  _seed_game_theory.json  _seed_linear_algebra.json  _seed_macroeconomics.json  _seed_mathematics.json  _seed_microeconomics.json  _seed_numerical_methods.json  _seed_optimization.json  _seed_other.json  _seed_probability.json  _seed_statistics.json  _seed_stochastic_processes.json  calculus.json  economics.json  finance.json  macroeconomics.json  mathematics.json  probability.json  statistics.json
docs/: index.md  myst.yml
docs/developer/: architecture.md  contributing.md  data-models.md  seeding-from-lectures.md
docs/user/: uv-guide.md  (+2 more)
prompts/: academic.txt  action-basic.txt  action-new.txt  default.txt
scripts/: add_missing_contexts.py  classify_difficulty.py  seed_from_glossary.py  seed_from_lectures.py
tests/: conftest.py  test_add.py  test_context.py  test_dataset.py  test_doctor.py  test_export.py  test_formatting.py  test_github.py  test_glossary.py  test_glossary_loading.py  test_judge.py  test_judgments.py  test_models.py  test_prompts.py  test_providers.py  test_run.py  test_scoring.py  test_stats.py  test_submit.py  test_term_context.py  test_translate.py  test_update.py  test_update_enrichment.py  test_validate.py  test_xp.py
(+65 files in other folders)
